versioned_docs/version-2024.2.7/professor/marcos_rogerio_oliveira.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Marcos Rogério Oliveira",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Bovinocultura de Leite",
          size: 4,
          teachers: [
            "Marcos Rogério Oliveira"
          ],
          classroom: "Sala 2-2",
          students: [
            "AGR2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Tecnologias de Produtos de Origem Animal",
          size: 2,
          teachers: [
            "Marcos Rogério Oliveira"
          ],
          classroom: "Sala 2-2",
          students: [
            "AGR2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        },
        {
          subject: "Tecnologia de Produtos de Origem Vegetal",
          size: 2,
          teachers: [
            "Marcos Rogério Oliveira"
          ],
          classroom: "Sala 2-2",
          students: [
            "AGR2023"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA)",
          size: 2,
          teachers: [
            "Marcos Rogério Oliveira"
          ],
          classroom: "Sala 2-2",
          students: [
            "AGO2022"
          ],
          time: "10:15 - 11:05",
          color: ""
        },
        {
          subject: "Forragicultura e Pastagens",
          size: 4,
          teachers: [
            "Marcos Rogério Oliveira"
          ],
          classroom: "Sala 6-2",
          students: [
            "AGR2024"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Marcos Rogério Oliveira

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
